# uhd-mcp

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude_config.json  example_commands.md  hatch_commands.md  install-service.sh  pyproject.toml  quick_start.sh  run_test.sh  setup.sh  setup_usrp.sh  start.sh  test_spectrum_analyzer.py  test_usrp_client.py  update-repo.sh  usrp_mcp_server.py  usrp_setup_files.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-deps-image.yml  build-mcp-image.yml  build-proxy-package.yml  release.yml  tests-on-pr.yml
deploy/: Dockerfile  README.md  deployment.yaml  github-pat-secret.yaml  route.yaml  service.yaml
docs/: claude_config.json  example_commands.md  hatch_commands.md  spectrum_analyzer.md
src/uhd_mcp/: __init__.py  __main__.py  usrp_mcp_server.py
src/uhd_mcp/utils/: __init__.py  config.py  device_parser.py  guardrails.py  script_executor.py  script_validator.py  spectrum_analyzer.py  vnc.py
src/usrp_proxy_dxt/: ICON_INSTRUCTIONS.md  INSTALL.md  README.md  README_NEW.md  SUMMARY.md  dev-setup.sh  manifest.json  package-lock.json  package.json  test.js  update-version.js
src/usrp_proxy_dxt/server/: index.js
tests/: test-proxy-build.sh
tests/hardware/: test_hardware_integration.py  test_mcp_tools_hw.py
tests/mcp_server/: test_execute_uhd_script_tool.py  test_guardrails.py  test_integration_no_hw.py  test_mcp_spectrum.py  test_script_executor.py  test_script_validation.py
tests/spectrum_analyzer/: test_spectrum_analyzer.py
tests/usrp_client/: test_usrp_client.py
