[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uhd-mcp"
dynamic = ["version"]
description = 'An MCP service for USRPs'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Andrea Lacava", email = "thecave003@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastmcp>=3.4.2,<4",
  "aiohttp>=3.8.0",
  "Pillow>=9.0.0",
  "matplotlib>=3.5.0",
  "numpy>=1.20.0",
  "toons>=0.5.0",
]

[project.urls]
Documentation = "https://github.com/wineslab/uhd-mcp/README.md"
Issues = "https://github.com/wineslab/uhd-mcp/issues"
Source = "https://github.com/wineslab/uhd-mcp"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["src/uhd_mcp"]

[tool.hatch.envs.default]
dependencies = [
  "fastmcp>=3.4.2,<4",
  "aiohttp>=3.8.0",
  "toons>=0.5.0",
]

[tool.hatch.envs.dev]
dependencies = [
  "fastmcp>=3.4.2,<4",
  "aiohttp>=3.8.0",
  "toons>=0.5.0",
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
]

[tool.hatch.envs.dev.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:.}"
format = "black {args:.}"
format-check = "black --check --diff {args:.}"
type-check = "mypy {args:src}"

[tool.hatch.scripts]
run-server = "python src/uhd_mcp/usrp_mcp_server.py"

[project.scripts]
usrp-mcp-server = "uhd_mcp.usrp_mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio", 
  "black",
  "ruff",
]
