[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uhd-mcp"
dynamic = ["version"]
description = 'An MCP service for USRPs'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Andrea Lacava", email = "a.lacava@northeastern.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastmcp>=3.4.2",
  "aiohttp>=3.8.0",
  # <2 because UHD (<=4.7) Python bindings are compiled against the NumPy 1.x
  # ABI, and execute_uhd_script runs user scripts with this environment's numpy.
  "numpy>=1.20.0,<2",
  "toons>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/wineslab/uhd-mcp"
Documentation = "https://github.com/wineslab/uhd-mcp#readme"
Issues = "https://github.com/wineslab/uhd-mcp/issues"
Source = "https://github.com/wineslab/uhd-mcp"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["src/uhd_mcp"]

[tool.hatch.envs.default]
dependencies = [
  "fastmcp>=3.4.2",
  "aiohttp>=3.8.0",
  "toons>=0.5.0",
]

[tool.hatch.envs.dev]
dependencies = [
  "fastmcp>=3.4.2",
  "aiohttp>=3.8.0",
  "toons>=0.5.0",
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "mypy",
]

[tool.hatch.envs.dev.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:.}"
format = "black {args:.}"
format-check = "black --check --diff {args:.}"
type-check = "mypy {args:src}"

[tool.hatch.scripts]
run-server = "python src/uhd_mcp/usrp_mcp_server.py"

[project.scripts]
usrp-mcp-server = "uhd_mcp.usrp_mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
# fastmcp/toons ship no type stubs; UHD tooling is exercised via subprocess.
ignore_missing_imports = true
check_untyped_defs = true
